Fix width so it doesn’t wrap in Safari.

--- a/app/assets/stylesheets/components/_rich_table.scss
+++ b/app/assets/stylesheets/components/_rich_table.scss
@@ -36,7 +36,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       // the container width needs to be fixed for the text-overflow ellipsis to work.
-      width: 280px;
+      width: 270px;
     }
 
     .item-content {
